package domain

type League struct {
	ID   int
	Name string
}
